--- a/Week 02/MLDM_2021_HW2&3.ipynb
+++ b/Week 02/MLDM_2021_HW2&3.ipynb
@@ -530,44 +530,52 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0979bda-ed59-443b-cf10-d2c84dfc7165"
+        "outputId": "aff25487-7149-4852-a6d7-8492164af886"
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.compose import make_column_transformer\n",
         "from sklearn.preprocessing import StandardScaler, RobustScaler, PolynomialFeatures, OneHotEncoder\n",
+        "from sklearn import preprocessing\n",
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn import preprocessing\n",
         "\n",
         "def feature_selection_and_preprocessing(dataset):\n",
         "  # <YOUR CODE>\n",
-        "  # E.g.:\n",
-        "  temp_features = dataset[[\"Fare\", \"SibSp\", \"Parch\", \"Sex\", \"Pclass\", \"Age\"]].copy()\n",
+        "  # E.g.:    \n",
+        "  temp_features = dataset[[\"Fare\", \"SibSp\", \"Parch\", \"Sex\", \"Pclass\", \"Age\",\"Embarked\"]].copy()\n",
         "  temp_features['Sex'] = temp_features['Sex'].map({'male': 0, 'female': 1})\n",
-        "  temp_features[\"Age\"] = dataset.Age.fillna(dataset.Age.median())\n",
+        "  temp_features[\"Age\"] = dataset.Age.fillna(dataset.Age.median())  \n",
+        "  # Fare min-max\n",
+        "  d = temp_features[\"Pclass\"] \n",
+        "  temp_features[\"Pclass\"] = (d - d.min()) / (d.max() - d.min())\n",
+        "  # standard\n",
+        "  d = temp_features[\"Age\"]   \n",
+        "  temp_features[\"Age\"] = (d - d.mean()) / d.std()\n",
         "\n",
-        "  #min_max_scaler = preprocessing.MinMaxScaler()\n",
-        "  #feature_scaled = min_max_scaler.fit_transform(temp_features)\n",
-        "  #features = pd.DataFrame(feature_scaled)\n",
+        "  d = temp_features[\"Fare\"]   \n",
+        "  temp_features[\"Fare\"] = (d - d.mean()) / d.std()\n",
         "\n",
-        "  features.columns = [\"Fare\", \"SibSp\", \"Parch\", \"Sex\", \"Pclass\", \"Age\"]\n",
-        "  features['Embarked'] = data.Embarked.fillna('unknown')\n",
-        "  features['Embarked'][0] = 'unknown'\n",
+        "  d = temp_features[\"Parch\"] \n",
+        "  temp_features[\"Parch\"] = d - d.min() / (d.max() - d.min())\n",
+        "  \n",
+        "  temp_features['Embarked'] = temp_features['Embarked'].fillna('unknown')    \n",
+        "  temp_features = pd.concat([temp_features,pd.get_dummies(temp_features['Embarked'])],axis=1)\n",
+        "  del temp_features['Embarked']\n",
+        "  if('unknown' in temp_features.columns):\n",
+        "      del temp_features['unknown']    \n",
+        "  return temp_features\n",
         "\n",
-        "  return features\n",
-        "\n",
+        "# class weight for imbalance\n",
+        "v = data_train['Survived'].value_counts()\n",
+        "class_weight = {0:v[0]/(max(v[0],v[1])), 1:( v[1]/max(v[0],v[1]) )}\n",
         "model = make_pipeline(\n",
         "    # <YOUR CODE>\n",
-        "    # E.g.\n",
-        "    make_column_transformer(\n",
-        "        (OneHotEncoder(sparse=False), ['Embarked', 'Sex']),\n",
-        "        remainder='passthrough'\n",
-        "    ),\n",
-        "    LogisticRegression(random_state=0, multi_class='multinomial')\n",
+        "    # E.g.        \n",
+        "    LogisticRegression(random_state=0, multi_class='multinomial',\n",
+        "                       class_weight=class_weight)\n",
         ")\n",
-        "\n",
         "\n",
         "# Validation code (do not touch)\n",
         "data = pd.read_csv(\"train.csv\", index_col='PassengerId')\n",
@@ -601,32 +609,14 @@
         "    test_predictions\n",
         "))"
       ],
-      "execution_count": 151,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Train accuracy: 0.7945007235890015\n",
-            "Test accuracy: 0.81\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+            "Train accuracy: 0.808972503617945\n",
+            "Test accuracy: 0.825\n"
           ]
         }
       ]
