--- a/Week 07/MLDM_2021_HW7.ipynb
+++ b/Week 07/MLDM_2021_HW7.ipynb
@@ -68,7 +68,7 @@
           "height": 374
         },
         "id": "cF5wcLSHBOw-",
-        "outputId": "3db4d057-005a-4834-d53d-fa984dc2163e"
+        "outputId": "f790835c-9e7e-43cd-d184-5a412c21267c"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R-dhzIu9HLcF",
-        "outputId": "7d98a982-02c3-4717-f41d-b65d763a108b"
+        "outputId": "059288bc-e2d7-4b99-ca81-e59e9e890b10"
       },
       "source": [
         "print(dataset.DESCR)"
@@ -361,7 +361,7 @@
           "height": 362
         },
         "id": "-9cf0j7qBmTr",
-        "outputId": "64573c49-2ce4-466c-c9f8-9739d8685661"
+        "outputId": "ff302712-97e2-433c-a44c-bf60a10b94f7"
       },
       "source": [
         "plt.figure(figsize=(5, 4), dpi=100)\n",
@@ -414,7 +414,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l8boBXE9DsU9",
-        "outputId": "673de6f3-2b17-4dc2-bdd5-4df7c1028f5e"
+        "outputId": "de3fac02-0159-4e52-ff2b-0c2984e716a8"
       },
       "source": [
         "X, y = data.drop('target', axis=1), data['target']\n",
@@ -483,7 +483,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GqFHDDe9MjZI"
+        "id": "WQ4NkGmpbLYv"
       },
       "source": [
         "## KNN"
@@ -493,14 +493,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2021-11-14T20:07:42.486500Z",
-          "start_time": "2021-11-14T20:07:42.449361Z"
+          "end_time": "2021-11-14T21:47:08.124438Z",
+          "start_time": "2021-11-14T21:47:08.056824Z"
         },
         "id": "vdQRhLvSBuV1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "33318320-7b41-41b0-f77b-ccb72f8233b0"
+        "outputId": "bb425b32-df42-47f1-afc0-082a65989e67"
       },
       "source": [
         "knn = KNeighborsRegressor(n_neighbors=5)\n",
@@ -527,7 +527,7 @@
         "run_control": {
           "marked": true
         },
-        "id": "jwAvQCC8MjZK"
+        "id": "q2dRagITbLYx"
       },
       "source": [
         "## Random forest"
@@ -537,14 +537,14 @@
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2021-11-14T20:07:57.139043Z",
-          "start_time": "2021-11-14T20:07:52.693703Z"
+          "end_time": "2021-11-14T21:47:18.723141Z",
+          "start_time": "2021-11-14T21:47:13.500567Z"
         },
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Wst3Ed1IMjZK",
-        "outputId": "8e061763-2943-4a80-be76-d8c9497e9b66"
+        "id": "DvNO6R5AbLYx",
+        "outputId": "bc97127e-9848-4bb4-daca-5918e417074e"
       },
       "source": [
         "randomforest = RandomForestRegressor(n_estimators=50)\n",
@@ -559,7 +559,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "MSE for random forest with rest of feature on test data: 0.43682\n"
+            "MSE for random forest with rest of feature on test data: 0.43596\n"
           ]
         }
       ]
@@ -567,30 +567,40 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ozYEjDdNMjZL"
+        "id": "wvpw25r_bLYy"
       },
       "source": [
         "## Both with ensemble"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9TDkFDjZbLYy"
+      },
+      "source": [
+        "###  without pipe!"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2021-11-14T20:08:45.173493Z",
-          "start_time": "2021-11-14T20:08:17.863615Z"
+          "end_time": "2021-11-14T21:27:37.305018Z",
+          "start_time": "2021-11-14T21:27:04.395285Z"
         },
+        "scrolled": false,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "HTMBaDGxMjZL",
-        "outputId": "9ddcd562-49ee-47b3-a362-cf0dd662b845"
+        "id": "rp64BcNjbLYz",
+        "outputId": "1170290e-8f37-4cdf-c9ad-af748b6d43a5"
       },
       "source": [
         "estimators = [ ('knn', knn), ('rf', randomforest)]\n",
         "reg = StackingRegressor(\n",
         "     estimators=estimators,\n",
-        "     final_estimator=LinearRegression())\n",
+        "     final_estimator=LinearRegression(), cv=5)\n",
         "reg.fit(X_train,y_train)\n",
         "pred = reg.predict(X_test)\n",
         "round(mean_squared_error(y_test, pred),5)"
@@ -601,7 +611,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.27342"
+              "0.27235"
             ]
           },
           "metadata": {},
@@ -610,57 +620,59 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "ExecuteTime": {
-          "end_time": "2021-11-14T20:42:34.317196Z",
-          "start_time": "2021-11-14T20:42:34.312364Z"
-        },
-        "id": "knXlm3HgMjZM"
+        "id": "CAY9yknybLYz"
       },
       "source": [
-        "col_transformer = make_column_transformer(\n",
-        "    ('passthrough',['Latitude', 'Longitude']),\n",
-        "    ('drop',['Latitude', 'Longitude']))"
-      ],
-      "execution_count": 12,
-      "outputs": []
+        "### with pipe"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2021-11-14T20:43:01.671525Z",
-          "start_time": "2021-11-14T20:43:01.663891Z"
+          "end_time": "2021-11-14T21:40:13.470175Z",
+          "start_time": "2021-11-14T21:39:47.185379Z"
         },
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "uGASHvvQMjZN",
-        "outputId": "b71f2473-c64f-4a40-ed4a-ee4f54b6ab75"
+        "id": "w_9jZ5kzbLY0",
+        "outputId": "0c07fd42-fc05-44fc-92fd-e823a3223057"
       },
       "source": [
-        "X = col_transformer.fit_transform(X_test)\n",
-        "X.shape"
+        "t_knn = make_column_transformer(('passthrough',['Latitude', 'Longitude']),remainder='drop')\n",
+        "t_rf = make_column_transformer(('drop',['Latitude', 'Longitude']),remainder='passthrough')\n",
+        "pipe_knn = make_pipeline(t_knn, knn)\n",
+        "pipe_rf = make_pipeline(t_rf, randomforest)\n",
+        "\n",
+        "estimators = [ ('knn', pipe_knn), ('rf', pipe_rf)]\n",
+        "reg = StackingRegressor(\n",
+        "     estimators=estimators,\n",
+        "     final_estimator=LinearRegression(), cv=5)\n",
+        "reg.fit(X_train,y_train)\n",
+        "pred = reg.predict(X_test)\n",
+        "round(mean_squared_error(y_test, pred),5)"
       ],
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(5160, 2)"
+              "0.23474"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 10
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PYYSU2hkM2NX"
+        "id": "xQru6E42bcOU"
       },
       "source": [
         ""
